--- a/BugTracker/BugTrackerAPI/BugTrackerAPI.csproj
+++ b/BugTracker/BugTrackerAPI/BugTrackerAPI.csproj
@@ -24,7 +24,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BugTrackerModel\BugTrackerModel.csproj" />
+    <ProjectReference Include="..\BugTrackerModel\BugTrackerModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
